Added Project and Datasource models for GraphQL API

--- a/GraphQL.EF.Conventions/GraphQL.EF.Conventions.csproj
+++ b/GraphQL.EF.Conventions/GraphQL.EF.Conventions.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="README.md" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
