Added fetching data from appropriate database feature for Datasource-Project relationship

--- a/GraphQL.EF.Conventions/appsettings.json
+++ b/GraphQL.EF.Conventions/appsettings.json
@@ -2,7 +2,8 @@
   "ConnectionStrings": {
     "ActorDBConnection": "Server=.\\SQLEXPRESS;Database=Actor_DB;Trusted_Connection=True;",
     "MovieDBConnection": "Server=.\\SQLEXPRESS;Database=Movie_DB;Trusted_Connection=True;",
-    "ProjectDBConnection": "Server=.\\SQLEXPRESS;Database=Project_DB;Trusted_Connection=True;",
+    "Project1DBConnection": "Server=.\\SQLEXPRESS;Database=Project_1;Trusted_Connection=True;",
+    "Project2DBConnection": "Server=.\\SQLEXPRESS;Database=Project_2;Trusted_Connection=True;",
     "MasterDBConnection": "Server=.\\SQLEXPRESS;Database=Master_DB;Trusted_Connection=True;"
   }
 }
